# nvim-oxi

./: Cargo.toml
crates/api/src/: buffer.rs  error.rs  extmark.rs  vim.rs  window.rs
crates/libuv/src/: error.rs  loop.rs
crates/luajit/: Cargo.toml
crates/luajit/src/: error.rs  lib.rs  mlua.rs  state.rs
crates/macros/: Cargo.toml
crates/macros/src/: plugin.rs
crates/types/: Cargo.toml
crates/types/src/: arena.rs  init_error.rs  lib.rs  mlua.rs
src/: entrypoint.rs  error.rs  lib.rs
tests/: Cargo.toml
tests/src/: from_object.rs  lib.rs
