[package]
name = "nvim-oxi-luajit"
description = "Rust bindings to LuaJIT for nvim-oxi"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[features]
mlua = ["dep:mlua"]

[dependencies]
thiserror = { workspace = true }
mlua = { version = "0.11", features = ["luajit"], optional = true }

[lints]
workspace = true
