[package]
name = "nvim-oxi-types"
description = "Rust bindings to types used by Neovim's C API"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[features]
mlua = ["dep:mlua"]
serde = ["dep:serde"]

[dependencies]
libc = "0.2"
luajit = { workspace = true }
serde = { version = "1.0", optional = true }
thiserror = { workspace = true }
mlua = { version = "0.11", features = ["luajit"], optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }

[lints]
workspace = true
